--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
   "author": "M-K-World-Wide",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "openai": "^4.0.0",
-    "three": "^0.160.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.1.0",
     "howler": "^2.2.4",
     "natural": "^6.10.4",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4"
+    "openai": "^4.0.0",
+    "socket.io": "^4.7.2",
+    "three": "^0.160.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
     "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
-    "jsdoc": "^4.0.2"
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.2",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -54,4 +55,4 @@
     "url": "https://github.com/M-K-World-Wide/Genesis-Drive/issues"
   },
   "homepage": "https://github.com/M-K-World-Wide/Genesis-Drive#readme"
-} 
+}
