--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,44 +5,125 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+
+# Cancel in-progress runs when new commits are pushed
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  NODE_VERSION: '20.x'
+  PYTHON_VERSION: '3.11'
 
 jobs:
-  build-and-test:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Set up Node.js
+      
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r AthenaMyst_Host/requirements.txt || true
-      - name: Install Node dependencies
-        run: |
-          if [ -f package.json ]; then npm install; fi
-      - name: Lint Python
-        run: |
-          pip install flake8
-          flake8 . || true
-      - name: Lint Node
-        run: |
-          if [ -f package.json ]; then npx eslint . || true; fi
-      - name: Run Python tests
-        run: |
-          python -m pytest AthenaMyst_Host/tests --maxfail=10 --disable-warnings -v || true
-      - name: Run Node tests
-        run: |
-          if [ -f package.json ]; then npm test || true; fi
-      - name: Upload coverage
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+      
+      - name: Install Node.js dependencies
+        run: npm ci
+        
+      - name: Run ESLint
+        run: npm run lint
+
+  test:
+    name: Test
+    needs: lint
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: ['20.x']
+      fail-fast: false
+
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Run tests
+        run: npm test -- --coverage
+        
+      - name: Upload coverage report
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: htmlcov/
+          path: coverage/
+
+  python:
+    name: Python Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f AthenaMyst_Host/requirements.txt ]; then
+            pip install -r AthenaMyst_Host/requirements.txt
+          fi
+          pip install pytest pytest-cov flake8
+          
+      - name: Lint Python code
+        if: always()
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --statistics
+          
+      - name: Run Python tests
+        if: always()
+        run: |
+          if [ -d "AthenaMyst_Host/tests" ]; then
+            python -m pytest AthenaMyst_Host/tests -v --cov=AthenaMyst_Host --cov-report=xml
+          fi
+          
+      - name: Upload coverage report
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-coverage
+          path: |
+            coverage.xml
+            htmlcov/
+
+  build:
+    name: Build
+    needs: [test, python]
+    runs-on: ubuntu-latest
+    
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Build project
+        run: npm run build
