--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,167 @@
 # Python
 __pycache__/
 *.py[cod]
+*$py.class
 *.so
-*.egg
-*.egg-info/
-dist/
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
 .eggs/
-*.log
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Virtual environments
-.venv/
-venv/
+# Virtual Environment
+.venv
 ENV/
+venv/
 
-# Node
+# Node.js
 node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
-# macOS
-.DS_Store
-
-# Test & coverage
+# Testing
 .coverage
-coverage/
+.coverage.*
+.coveragerc
 htmlcov/
 .pytest_cache/
+.mypy_cache/
 
 # Environment
 .env
-.env.*
+.env.local
+.env.development
+.env.test
+.env.production
 
-# CI/CD
-*.pid
-*.lock
-
-# Submodules
-.gitmodules
-.git/
+# Build / Dist
+/dist
+/build
+/out
+.next/
+.nuxt/
+.cache/
+.temp/
+.temp*
 
 # Editor
 .idea/
 .vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Misc
-*.swp
-*.bak
-*.tmp
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ignore local config
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local development
+.local
+
+# Lock files (keep package-lock.json but ignore others)
+package-lock.json
+!package-lock.json # Keep package-lock.json
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+out
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless/
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# Local development
+*.local
 config.local.*
 
 # Documentation build output
